// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SemanticSearchMultieditPanel changeTemplate should set the template of the entities to the selected one 1`] = `
Array [
  Array [
    Immutable.List [
      Immutable.Map {
        "searchId": "doc1",
        "template": "tpl3",
      },
      Immutable.Map {
        "searchId": "doc2",
        "template": "tpl3",
      },
      Immutable.Map {
        "searchId": "doc3",
        "template": "tpl3",
      },
    ],
  ],
]
`;

exports[`SemanticSearchMultieditPanel open should not open side panel if there are no multi edit entities 1`] = `
<SidePanel
  className="multi-edit"
  mode=""
  open={false}
>
  <div
    className="sidepanel-header"
  >
    <button
      className="closeSidepanel close-modal"
      onClick={[Function]}
      type="button"
    >
      <Connect(Icon)
        icon="times"
      />
    </button>
  </div>
  <div
    className="sidepanel-body"
  >
    <div
      className="alert alert-warning"
    >
      <Connect(Icon)
        icon="exclamation-triangle"
        size="2x"
      />
      <p>
        <Connect(Translate)>
          Warning: you are editing multiple entities. Fields marked with a
        </Connect(Translate)>
         
        <Connect(Icon)
          icon="exclamation-triangle"
        />
         
        <Connect(Translate)>
          will be updated with the same value.
        </Connect(Translate)>
      </p>
    </div>
    <Connect(MetadataForm)
      changeTemplate={[Function]}
      id="multiEdit"
      model="semanticSearch.multipleEdit"
      multipleEdition={true}
      onSubmit={[Function]}
      template={null}
      thesauris={
        Immutable.List [
          Immutable.Map {
            "_id": "t1",
            "name": "T1",
            "values": Immutable.List [
              Immutable.Map {
                "_id": "v1",
                "id": "v1",
                "label": "V1",
              },
            ],
          },
        ]
      }
    />
  </div>
  <div
    className="sidepanel-footer"
  >
    <button
      className="cancel-edit-metadata btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      <Connect(Icon)
        icon="times"
      />
      <span
        className="btn-label"
      >
        Cancel
      </span>
    </button>
    <button
      className="btn btn-success"
      form="multiEdit"
      type="submit"
    >
      <Connect(Icon)
        icon="save"
      />
      <span
        className="btn-label"
      >
        Save
      </span>
    </button>
  </div>
</SidePanel>
`;

exports[`SemanticSearchMultieditPanel should render multi edit form for semantic search multi edit documents 1`] = `
<SidePanel
  className="multi-edit"
  mode=""
  open={true}
>
  <div
    className="sidepanel-header"
  >
    <button
      className="closeSidepanel close-modal"
      onClick={[Function]}
      type="button"
    >
      <Connect(Icon)
        icon="times"
      />
    </button>
  </div>
  <div
    className="sidepanel-body"
  >
    <div
      className="alert alert-warning"
    >
      <Connect(Icon)
        icon="exclamation-triangle"
        size="2x"
      />
      <p>
        <Connect(Translate)>
          Warning: you are editing multiple entities. Fields marked with a
        </Connect(Translate)>
         
        <Connect(Icon)
          icon="exclamation-triangle"
        />
         
        <Connect(Translate)>
          will be updated with the same value.
        </Connect(Translate)>
      </p>
    </div>
    <Connect(MetadataForm)
      changeTemplate={[Function]}
      id="multiEdit"
      model="semanticSearch.multipleEdit"
      multipleEdition={true}
      onSubmit={[Function]}
      template={
        Immutable.Map {
          "_id": "",
          "properties": Immutable.List [
            Immutable.Map {
              "name": "p1",
              "type": "select",
              "content": "t1",
            },
          ],
        }
      }
      thesauris={
        Immutable.List [
          Immutable.Map {
            "_id": "t1",
            "name": "T1",
            "values": Immutable.List [
              Immutable.Map {
                "_id": "v1",
                "id": "v1",
                "label": "V1",
              },
            ],
          },
        ]
      }
    />
  </div>
  <div
    className="sidepanel-footer"
  >
    <button
      className="cancel-edit-metadata btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      <Connect(Icon)
        icon="times"
      />
      <span
        className="btn-label"
      >
        Cancel
      </span>
    </button>
    <button
      className="btn btn-success"
      form="multiEdit"
      type="submit"
    >
      <Connect(Icon)
        icon="save"
      />
      <span
        className="btn-label"
      >
        Save
      </span>
    </button>
  </div>
</SidePanel>
`;
